# RLForge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
RLForge/Application/: CMakeLists.txt
RLForge/Application/Core/: Application.cpp
RLForge/RLForge/: CMakeLists.txt
RLForge/RLForge/Core/: Core.cpp  Core.h  DLLMain.cpp
RLForge/RLForge/Functional/: Functional.cpp  Functional.hpp
RLForge/RLForge/Hooks/: AllocateHook.cpp  AllocateHook.hpp  Detour.hpp  DetourBase.cpp  DetourBase.hpp  HookFactory.cpp  HookFactory.hpp  HookHandlers.hpp
RLForge/RLForge/Hooks/Assembly/: LDAssembly.cpp  LDAssembly.hpp  ProcessEventHook.s
RLForge/RLForge/Hooks/Detail/: FFrame.hpp
RLForge/RLForge/Meta/: TypeErasure.hpp  UnsafeCast.hpp
RLForge/RLForge/Module/: ModBase.hpp
RLForge/RLForge/Module/Mods/: TestMod.cpp  TestMod.hpp
RLForge/RLForge/Pattern/: SignatureFinder.cpp  SignatureFinder.hpp
RLForge/RLForge/RL/: NamesDump.txt  SDK.hpp
RLForge/RLForge/RL/SDK/: RL_AkAudio_classes.hpp  RL_AkAudio_functions.cpp  RL_AkAudio_parameters.hpp  RL_AkAudio_structs.hpp  RL_Basic.cpp  RL_Basic.hpp  RL_Core_classes.hpp  RL_Core_functions.cpp  RL_Core_parameters.hpp  RL_Core_structs.hpp  RL_Engine_classes.hpp  RL_Engine_functions.cpp  RL_Engine_parameters.hpp  RL_Engine_structs.hpp  RL_GFxUI_classes.hpp  RL_GFxUI_functions.cpp  RL_GFxUI_parameters.hpp  RL_GFxUI_structs.hpp  RL_GameFramework_classes.hpp  RL_GameFramework_functions.cpp  RL_GameFramework_parameters.hpp  RL_GameFramework_structs.hpp  RL_IpDrv_classes.hpp  RL_IpDrv_functions.cpp  RL_IpDrv_parameters.hpp  RL_IpDrv_structs.hpp  RL_OnlineSubsystemSteamworks_classes.hpp  RL_OnlineSubsystemSteamworks_functions.cpp  RL_OnlineSubsystemSteamworks_parameters.hpp  RL_OnlineSubsystemSteamworks_structs.hpp  RL_ProjectX_classes.hpp  RL_ProjectX_functions.cpp  RL_ProjectX_parameters.hpp  RL_ProjectX_structs.hpp  RL_TAGame_classes.hpp  RL_TAGame_parameters.hpp  RL_TAGame_structs.hpp  RL_WinDrv_classes.hpp  RL_WinDrv_functions.cpp  RL_WinDrv_parameters.hpp  (+4 more)
